src/test/deca/context/valid/created/class-meth-field.deca
class A {
	protected int x;
	int getX() {
		return x;
	}
	void setX(int a){
		this.x = a;
	}
}
