src/test/deca/context/invalid/created/getter.deca
class A {
	protected int x;
}
class B extends A {
	int getX(A a) {
		return a.x;
	}
}
class X {
	void m() {
		A a = new A();
		B b = new B();
		println(b.getX(a)); // Ok du point de vue de la condition (2)
	}
}